syntax = "proto3";
package pb;
option go_package = "./pb";
import "common.proto";
import "msg.proto";
import "conn.proto";

message ImMQBody {
  // 推送事件
  enum Event {
    Unknown = 0;
  }
  Event event = 1;
  bytes data = 2;
}

message BeforeConnectReq {
  ConnParam connParam = 1;
}

message BeforeConnectResp {
  int32 code = 1;
  string msg = 2;
}

message AfterConnectReq {
  ConnParam connParam = 1;
  string connectedAt = 2;
}

message AfterDisconnectReq {
  ConnParam connParam = 1;
  string connectedAt = 2;
  string disconnectedAt = 3;
}

message GetUserLatestConnReq {
  string userId = 1;
}

message GetUserLatestConnResp {
  string userId = 1;
  string ip = 2;
  IpRegion ipRegion = 3;
  string connectedAt = 4;
  string disconnectedAt = 5;
  string platform = 6;
  string deviceId = 7;
}

service imService {
  rpc BeforeConnect(BeforeConnectReq) returns (BeforeConnectResp);
  rpc AfterConnect(AfterConnectReq) returns (CommonResp);
  rpc AfterDisconnect(AfterDisconnectReq) returns (CommonResp);
  rpc KickUserConn(KickUserConnReq) returns (KickUserConnResp);
  rpc GetUserConn(GetUserConnReq) returns (GetUserConnResp);
  rpc GetUserLatestConn(GetUserLatestConnReq) returns (GetUserLatestConnResp);
  rpc SendMsg(SendMsgReq) returns (SendMsgResp);
}